--- a/index.html
+++ b/index.html
@@ -9,12 +9,21 @@
     body {
       margin: 0;
       padding: 0;
+      font-family: sans-serif;
+    }
+
+    h1 {
+      margin: 0;
+      padding: 40px;
     }
 
 
     #App {
-      width: 100%;
-      height: calc(100vh - 39px);
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
     }
 
     .button-list {
@@ -22,6 +31,8 @@
       list-style: none;
       margin: 0;
       padding: 10px;
+      position: absolute;
+      z-index: 1000;
     }
 
     .button-list li {
@@ -32,6 +43,7 @@
 <body>
   <ul class="button-list">
   </ul>
+  <h1>PATTERN</h1>
   <div id="App"></div>
   <script src="app.js"></script>
 </body>
